    the patch. (Closes: #496643)
  * debsign: When copying .changes files from a remote host, attempt to process
    each copied file if a wildcard was used in the filename (Closes: #491627)
  * nmudiff: Add support for using $DEBFULLNAME as well as $DEBEMAIL when
    generating the From: header for a sendmail-generated mail. Based on a
    patch from Thomas Viehmann. (Closes: #496460)
  * tagpending:
    + Fix a typo in the help output. Thanks Thijs Kinkhorst. (Closes: #494131)
    + Use the new "bts --toolname" switch instead of an in-body comment to
      indicate that tagpending was used.
    + Make the --wnpp option work again. Thanks gregor herrmann.
      (Closes: #497820)
  * uscan: Exit with the correct status when --watchfile was used.
    (Closes: #498057)

  [ Stefano Zacchiroli ]
  * bts: add support for the fake "gift" tag. It is to be used as a shorthand
    for the "gift" usertag, see http://wiki.debian.org/qa.debian.org/GiftTag

  [ James Vega ]
  * bts: Add new 'status' command which returns various bits of information
    about the state of the given bugs.  Thanks to Don Armstrong for the patch.
    (Closes: #494614)

  [ Joey Hess ]
  * bts: Add new 'summary' command.

  [ Patrick Schoenfeld ]
  * build-rdeps: Add a --distribution parameter to enable selection of
    another distribution instead of unstable
    (Closes: #471498)

  [ James Vega ]
  * uscan: Correct the <base ...> regex to be case-insensitive.  (Closes:
    #495265)

  [ Christoph Berg ]
  * debsign: Fix debsign -r dir/*.changes, and do some QA on the manpage.
    Continue with next file if an already existing signature is kept.

  [ Mohammed Adnène Trojette ]
  * nmudiff: Use a friendlier template inspired from Lucas Nussbaum's
    patch. (Closes: #496628)
  * namecheck:
    + New script by Steve Kemp included to check project names are not
      already taken. (Closes: #484271)
    + Remove reference to a LICENSE file.
    + Don't lose the project name during the check.